update craving tracking and daily summary