@@ -6,8 +6,11 @@ import com.swp391project.SWP391_QuitSmoking_BE.dto.craving.CravingTrackingRespon
 import com.swp391project.SWP391_QuitSmoking_BE.dto.craving.CravingTrackingUpdateRequest;
 import com.swp391project.SWP391_QuitSmoking_BE.dto.craving.RawTrackingCreateRequest;
 import com.swp391project.SWP391_QuitSmoking_BE.entity.CravingTracking;
+import com.swp391project.SWP391_QuitSmoking_BE.entity.DailySummary;
 import com.swp391project.SWP391_QuitSmoking_BE.enums.Situation;
 import com.swp391project.SWP391_QuitSmoking_BE.enums.WithWhom;
+import com.swp391project.SWP391_QuitSmoking_BE.exception.CravingTrackingDeletedException;
+import com.swp391project.SWP391_QuitSmoking_BE.exception.ResourceNotFoundException;
 import com.swp391project.SWP391_QuitSmoking_BE.repository.CravingTrackingRepository;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
@@ -17,41 +20,53 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.HashSet;
+import java.util.*;
 import java.util.stream.Collectors;
-
-//class CravingTrackingDeletedException extends RuntimeException {
-//    public CravingTrackingDeletedException(String message) {
-//        super(message);
-//    }
-//}
 
 @AllArgsConstructor
 @Service
 public class CravingTrackingService {
     private final CravingTrackingRepository cravingTrackingRepository;
+    private final DailySummaryService dailySummaryService;
     private final ModelMapper modelMapper;
     private final ObjectMapper objectMapper;
     private final StringRedisTemplate stringRedisTemplate;
 
     //chuyển đổi entity thành response DTO
     private CravingTrackingResponse convertToResponseDto(CravingTracking cravingTracking) {
-        return modelMapper.map(cravingTracking, CravingTrackingResponse.class);
+        if (cravingTracking == null) {
+            return null; // Trả về null nếu cravingTracking là null
+        }
+        CravingTrackingResponse response = modelMapper.map(cravingTracking, CravingTrackingResponse.class);
+        if (cravingTracking.getDailySummary() != null && cravingTracking.getDailySummary().getQuitPlan() != null &&
+                cravingTracking.getDailySummary().getQuitPlan().getMember() != null) {
+            response.setMemberId(cravingTracking.getDailySummary().getQuitPlan().getMember().getMemberId());
+        } else {
+            throw new ResourceNotFoundException("Không tìm thấy thông tin liên quan đến bản ghi. Không thể chuyển đổi sang DTO");
+        }
+        return response;
     }
 
     //tổng hợp dữ liệu RawCraving theo giờ từ Redis và lưu vào CravingTracking
     //Nếu không có sự kiện nào trong giờ đó, hay bản ghi CravingTracking đã tồn tại và count = 0, nó sẽ bị xóa
+    //Sau khi tổng hợp từ các bản ghi Redis -> tìm CravingTracking hiện có cho giờ đó -> Nếu bản ghi không tồn tại -> tạo mới bản ghi
     @Transactional
-    public CravingTracking aggregateHourlyCravingData(LocalDateTime hourToAggregate) {
+    public CravingTracking aggregateHourlyCravingData(UUID memberId, LocalDateTime hourToAggregate) {
         //chuyển thời gian đầu vào về thời điểm bắt đầu chính xác của giờ đó
         LocalDateTime startOfHour = hourToAggregate.withMinute(0).withSecond(0).withNano(0);
+        LocalDate dateOfHour = startOfHour.toLocalDate();
+
+        // Tìm hoặc tạo DailySummary cho thành viên và ngày này
+        DailySummary dailySummary = dailySummaryService.findOrCreateDailySummary(memberId, dateOfHour);
+        if (dailySummary == null) {
+            //nếu DailySummaryService không tìm/tạo được
+            throw new IllegalStateException("Không tìm thấy hoặc tạo được DailySummary cho thành viên " + memberId + " vào ngày " + dateOfHour);
+        }
 
         //Lấy tất cả các sự kiện thô trong giờ đó từ Redis dựa theo keys
-        //Pattern: raw_craving_event:{epoch_day}:{hour_of_day}:*
-        String keyPattern = String.format("raw_craving_event:%d:%d:*",
+        //Pattern: raw_craving_event:{memberId}:{epoch_day}:{hour_of_day}:*
+        String keyPattern = String.format("raw_craving_event:%s:%d:%d:*",
+                memberId.toString(),
                 startOfHour.toLocalDate().toEpochDay(),
                 startOfHour.getHour());
 
@@ -60,40 +75,44 @@ public class CravingTrackingService {
 
         //Lấy danh sách các sự kiện thô theo giờ đó từ Redis
         //trả về list rỗng nếu không có keys nào
-        List<RawTrackingCreateRequest> rawEventsInHour = rawEventKeys != null ? rawEventKeys.stream()
-                .map(key -> {
-                    //Lấy chuỗi JSON được lưu trữ dưới key
-                    String eventJson = stringRedisTemplate.opsForValue().get(key);
-                    if (eventJson != null) {
-                        try {
-                            //Chuyển đổi chuỗi JSON thành DTO
-                            return objectMapper.readValue(eventJson, RawTrackingCreateRequest.class);
-                        } catch (JsonProcessingException e) {
-                            System.err.println("Lỗi khi đọc JSON từ Redis cho key " + key + ": " + e.getMessage());
+        //Lấy chuỗi JSON được lưu trữ dưới key
+        //Chuyển đổi chuỗi JSON thành DTO
+        //loại bỏ các giá trị null khỏi stream (từ map)
+        List<RawTrackingCreateRequest> rawEventsInHour = List.of(); // Khởi tạo rỗng
+        if (!rawEventKeys.isEmpty()) {
+            rawEventsInHour = rawEventKeys.stream()
+                    .map(key -> {
+                        String eventJson = stringRedisTemplate.opsForValue().get(key);
+                        if (eventJson != null) {
+                            try {
+                                return objectMapper.readValue(eventJson, RawTrackingCreateRequest.class);
+                            } catch (JsonProcessingException e) {
+                                System.err.println("Lỗi khi đọc JSON từ Redis cho key " + key + ": " + e.getMessage());
+                            }
                         }
-                    }
-                    return null;
-                })
-                .filter(java.util.Objects::nonNull) //loại bỏ các giá trị null khỏi stream (từ map)
-                .collect(Collectors.toList()) : List.of();
+                        return null;
+                    })
+                    .filter(java.util.Objects::nonNull) // Loại bỏ các giá trị null khỏi stream (từ map)
+                    .toList();
+        }
 
         //Tổng hợp dữ liệu
         int totalSmoked = rawEventsInHour.stream().mapToInt(RawTrackingCreateRequest::getSmokedCount).sum();
         int totalCravings = rawEventsInHour.stream().mapToInt(RawTrackingCreateRequest::getCravingsCount).sum();
 
-        //tìm record CravingTracking hiện có cho giờ-ngày này
-        Optional<CravingTracking> existingAggregatedRecord = cravingTrackingRepository.findByDateTime(startOfHour);
+        //tìm record CravingTracking hiện có cho giờ-ngày này dựa theo DailySummary của member đang tạo
+        Optional<CravingTracking> existingAggregatedRecord = dailySummary.getCravingTrackings().stream()
+                .filter(ct -> ct.getTrackTime().withMinute(0).withSecond(0).withNano(0).equals(startOfHour))
+                .findFirst();
+
         CravingTracking aggregatedRecord;
+        boolean isNewRecord = false;
         if (existingAggregatedRecord.isPresent()) {
             aggregatedRecord = existingAggregatedRecord.get();
         } else {
             aggregatedRecord = new CravingTracking();
             aggregatedRecord.setTrackTime(startOfHour);
         }
-
-        //Cập nhật số liệu
-        aggregatedRecord.setSmokedCount(totalSmoked);
-        aggregatedRecord.setCravingsCount(totalCravings);
 
         //Thu thập tất cả các giá trị Situation và WithWhom từ raw events
         Set<Situation> aggregatedSituations = rawEventsInHour.stream()
@@ -106,40 +125,59 @@ public class CravingTrackingService {
                 .filter(java.util.Objects::nonNull) //Lọc bỏ các giá trị null
                 .collect(Collectors.toCollection(HashSet::new)); //HashSet để đảm bảo duy nhất
 
+        //Cập nhật giá trị mới tổng hợp
+        aggregatedRecord.setSmokedCount(totalSmoked);
+        aggregatedRecord.setCravingsCount(totalCravings);
         aggregatedRecord.setSituations(aggregatedSituations);
         aggregatedRecord.setWithWhoms(aggregatedWithWhoms);
 
         //Nếu tổng smokedCount và cravingsCount đều là 0, thì xóa bản ghi nếu tồn tại
         if (aggregatedRecord.getSmokedCount() == 0 && aggregatedRecord.getCravingsCount() == 0) {
-            if (existingAggregatedRecord.isPresent()) {
-                cravingTrackingRepository.delete(aggregatedRecord);
-                if (rawEventKeys != null && !rawEventKeys.isEmpty()) {
-                    stringRedisTemplate.delete(rawEventKeys); // Xóa tất cả raw events đã xử lý từ Redis
-                }
-                dailySummaryService.recalculateDailyTotals(dailySummary); //cập nhật DailySummary
-                return null;
+            if (existingAggregatedRecord.isPresent()) { // Chỉ xóa nếu là bản ghi đã tồn tại trong DB
+                deleteCravingTracking(dailySummary, aggregatedRecord.getCravingTrackingId());
+            }
+            if (!rawEventKeys.isEmpty()) {
+                stringRedisTemplate.delete(rawEventKeys); // Xóa tất cả raw events đã xử lý từ Redis
             }
             return null; //Không có bản ghi cũ và tổng bằng 0, không cần lưu
         }
 
-        // Lưu bản ghi đã tổng hợp vào DB
-        CravingTracking savedAggregatedRecord = createCravingTracking(aggregatedRecord);
+        // Lưu/cập nhật bản ghi đã tổng hợp vào DB
+        CravingTracking savedAggregatedRecord = createCravingTracking(dailySummary, aggregatedRecord);
 
         // Xóa tất cả raw events đã tổng hợp khỏi Redis - khi có sự kiện và đã lưu vào DB
-        if (rawEventKeys != null && !rawEventKeys.isEmpty()) {
+        if (!rawEventKeys.isEmpty()) {
             stringRedisTemplate.delete(rawEventKeys);
         }
-
-        dailySummaryService.recalculateDailyTotals(dailySummary); //cập nhật DailySummary
 
         return savedAggregatedRecord;
     }
 
+    @Transactional
+    public CravingTracking createCravingTracking(DailySummary dailySummary, CravingTracking cravingTracking) {
+        // Kiểm tra xem cravingTracking đã có trong danh sách của dailySummary chưa
+        //nếu là bản ghi mới, thêm vào DailySummary
+        if (!dailySummary.getCravingTrackings().contains(cravingTracking)) {
+            cravingTracking.setDailySummary(dailySummary);
+            dailySummary.getCravingTrackings().add(cravingTracking);
+        }
+        // Các Bean Validation trên entity sẽ tự động được kích hoạt
+        CravingTracking savedRecord = cravingTrackingRepository.save(cravingTracking);
+        // Tái tính toán tổng của DailySummary liên quan sau khi CravingTracking được lưu/cập nhật
+        dailySummaryService.recalculateDailyTotals(dailySummary);
+        return savedRecord;
+    }
 
     @Transactional
-    public CravingTracking createCravingTracking(CravingTracking cravingTracking) {
-        // Các Bean Validation trên entity sẽ tự động được kích hoạt
-        return cravingTrackingRepository.save(cravingTracking);
+    public void deleteCravingTracking(DailySummary dailySummary, Integer id) {
+        CravingTracking cravingTracking = cravingTrackingRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy bản ghi với ID: " + id));
+        if (!Objects.equals(cravingTracking.getDailySummary().getDailySummaryId(), dailySummary.getDailySummaryId())) {
+            throw new IllegalArgumentException("Bản ghi theo dõi không thuộc về DailySummary được cung cấp");
+        }
+        dailySummary.getCravingTrackings().remove(cravingTracking);
+        dailySummaryService.recalculateDailyTotals(dailySummary); //cập nhật DailySummary
+        //cravingTrackingRepository.deleteById(id); // Không cần xóa trực tiếp vì orphanRemoval = true đã xử lý việc này
     }
 
     @Transactional
@@ -165,15 +203,14 @@ public class CravingTrackingService {
         if (request.getSituations() != null) {
             existingTracking.setSituations(request.getSituations());
         }
-        // Tương tự cho withWhoms
         if (request.getWithWhoms() != null) {
             existingTracking.setWithWhoms(request.getWithWhoms());
         }
 
         //Tự động xóa bản ghi nếu cả smokedCount và cravingsCount đều bằng 0
         if (existingTracking.getSmokedCount() == 0 && existingTracking.getCravingsCount() == 0) {
-            cravingTrackingRepository.delete(existingTracking);
-            throw new CravingTrackingDeletedException("Bản ghi theo dõi cơn thèm đã được xóa vì số lượng thuốc hút và số lần thèm thuốc đều bằng 0");
+            deleteCravingTracking(existingTracking.getDailySummary(), existingTracking.getCravingTrackingId());
+            throw new CravingTrackingDeletedException("Bản ghi đã được xóa vì số lượng thuốc hút và số lần thèm thuốc đều bằng 0");
         }
 
         // Lưu bản ghi đã cập nhật
@@ -186,33 +223,28 @@ public class CravingTrackingService {
         return convertToResponseDto(updatedTracking);
     }
 
-    //review
-    @Transactional(readOnly = true)
-    public CravingTrackingResponseDTO getCravingTrackingById(Integer id) {
+    @Transactional
+    public CravingTrackingResponse getCravingTrackingById(Integer id) {
         CravingTracking cravingTracking = cravingTrackingRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("CravingTracking not found with ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy bản ghi với ID: " + id));
         return convertToResponseDto(cravingTracking);
     }
 
-    @Transactional(readOnly = true)
-    public List<CravingTrackingResponseDTO> getCravingTrackingsByDailySummaryId(Integer dailySummaryId) {
-        DailySummary dailySummary = dailySummaryRepository.findById(dailySummaryId)
-                .orElseThrow(() -> new ResourceNotFoundException("DailySummary not found with ID: " + dailySummaryId));
+    @Transactional
+    public List<CravingTrackingResponse> getCravingTrackingsByDate(LocalDate date) {
+        List<CravingTracking> cravingTrackingList = cravingTrackingRepository.findAllByDate(date);
 
-        return cravingTrackingRepository.findByDailySummary(dailySummary).stream()
+        if (cravingTrackingList.isEmpty()) {
+            throw new ResourceNotFoundException("Không tìm thấy bản ghi nào cho ngày: " + date);
+        }
+
+        return cravingTrackingList.stream()
                 .map(this::convertToResponseDto)
                 .collect(Collectors.toList());
     }
 
     @Transactional
-    public void deleteCravingTracking(Integer id) {
-        CravingTracking trackingToDelete = cravingTrackingRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("CravingTracking not found with ID: " + id));
-
-        DailySummary dailySummary = trackingToDelete.getDailySummary(); // Lấy DailySummary trước khi xóa
-
-        cravingTrackingRepository.deleteById(id);
-
-        dailySummaryService.recalculateDailyTotals(dailySummary); // Gọi để cập nhật DailySummary
+    public List<CravingTracking> getCravingTrackingsByDailySummaryId(Integer dailySummaryId) {
+        return cravingTrackingRepository.findByDailySummary_DailySummaryId(dailySummaryId);
     }
 }
